--- a/resposta1.html
+++ b/resposta1.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <a href="Index.html"><button style="background-color: rgb(112, 45, 112);color: white;">Voltar</button></a>
+  <a href="home.html"><button style="background-color: rgb(112, 45, 112);color: white;">Voltar</button></a>
 <footer>
   <div style="color:white;text-align: center;"> 
     Todos os Direitos Reservados:deryck.ferre@gmail.com</p>
