--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Desafio Pag:20</title>
+  <title>Desafio Pag:24</title>
   <meta charset="utf=8">
   <link rel="stylesheet" type="text/css" href="Css1.css">
 
@@ -12,21 +12,21 @@
 
 
   <div class="atvdapostila" style="text-align: right; background-color: rgb(112, 45, 112);color: white;">
-    <h3> Atividade apostila pag: 20 </h3>
+    <h3> Atividade apostila pag: 24 </h3>
   </div>
 
   <hr>
   </hr>
 
   <div class="data" div style="background-color: rgb(112, 45, 112);">
-    <p style="text-align: right;"><b>Data:</b> 14/02/2023</p>
+    <p style="text-align: right;"><b>Data:</b> 17/02/2023</p>
   </div>
 
   <hr>
   </hr>
 
   <div class="aluno" div style="background-color: rgb(112, 45, 112);">
-    <p style="text-align: right;"><b>Aluno:</b> Déryck de Souza Costa Ferreira de Paula
+    <p style="text-align: right;"><b>Aluno:</b> Rayssa Silva Dos Santos
   </div>
 
   <hr>
@@ -34,7 +34,7 @@
   <div class="turma" div style="background-color: rgb(112, 45, 112);">
     <p style="text-align: right;"><b>Turma:</b> 3°NT</p>
   </div>
-  <div=class"img" div class=""> <img src="https://i.pinimg.com/236x/b0/c7/53/b0c753eb54120c75d3590321b396c5fa.jpg" width=25% div>
+  <div=class"img" div class=""> <img src="https://lh3.googleusercontent.com/4M4aeaq4LQwNoL7BkfnGD_BDQCUuVA2JWYXqEtuRbTnMK1kVgJcbE1KcPjHo-fDPHg" width=25% div>
     <hr>
     </hr>
 </head>
@@ -43,7 +43,7 @@
 
   <p>
   <div class="primeiracor">
-    <li><b>1°</b> Qual o perfil do consumidor on-line ?</p>
+    <li><b>1°</b> Diferencie com exemplos o que SEO de SEM.?</p>
   </div>
   </p>
   <a href="resposta1.html"><button style="background-color: rgb(112, 45, 112);color: white;">Resposta</button></a>
@@ -52,7 +52,7 @@
 
   <div class="segundacor">
     <p>
-      <li><b>2°</b> Qual o benefício é visto em uma Pré-compra de produtos ?</li>
+      <li><b>2°</b> Explique os componentes de uma árvore de categoria?</li>
     </p>
   </div>
   <a href="resposta2.html"><button style="background-color: rgb(112, 45, 112);color: white;">Resposta</button></a>
@@ -60,7 +60,7 @@
   </hr>
 
   <div class="terceiracor">
-    <li><b>3°</b> Quais são as infrações mais comuns das normas de defesa ao consumidor ?</p>
+    <li><b>3°</b> Qual a finalidade de plug-ins nos sites web? </p>
   </div>
   <a href="resposta3.html"><button style="background-color: rgb(112, 45, 112);color: white;">Resposta</button></a>
   <hr>
@@ -68,7 +68,7 @@
 
 <footer>
 <div style="color:white;text-align: center;"> 
-  Todos os Direitos Reservados:deryck.ferre@gmail.com</p>
+  Direitos A ray308085@gmail.com</p>
   </div>
 </footer>  
 <hr>
