--- a/resposta1.html
+++ b/resposta1.html
@@ -1,23 +1,16 @@
 <html>
  
   <head>
-    <title>Desafio Pag:20 (1)</title>
+    <title>Desafio Pag:24 (1)</title>
     
     <meta charset="utf=8">
   <link rel="stylesheet" type="text/css" href="Css1.css">
     
-  <h1 style="text-align: center;">1° Qual o perfil do consumidor on-line </h1>
+  <h1 style="text-align: center;">1° Diferencie com exemplos o que SEO de SEM. </h1>
   <hr></hr>
    
-<h2>Hoje em dia, existem vários tipos de consumidores on-line, desde os mais jovens até mesmo pessoas mais velhas que se interessaram e acham interessante a tcnologia de hoje.</h2> 
+<h2>O SEO funciona de forma orgânica, ou seja, os mecanismos de busca rastreiam o conteúdo e o classificam como relevante ou não. Já o SEM refere-se a anúncios pagos que, por meio de diversas técnicas, aparecem nas primeiras posições quando uma pessoa faz uma busca. SEM é uma forma de publicidade paga.</h2> 
 
-<h2>Mas, falando especificamente dos dias atuais, os consumidores ficaram mais exigentes, não só na questão de causar uma alta demanda de pedidos, mas também sobre a qualidade em que elas são feitas, a forma que a empresa faz um "MKTG DG" (Marketing Digital), a experiência ao entrar no site, o conforto na hora de escolher e finalizar o pagamento do produto selecionado pelo consumidor.</h2>
-
-<h2>Também esperam uma experiência de compra personalizada, como produtos de beleza, itens de cozinha, bijuterias e por aí vai. Dependendo de consumidor para consumidor, conforme ele vai procurando e acessando coisas do seu interesse, o site vai recomendar coisas conforme o perfil salvo dele. Também estão muito exigentes com o impacto ambiental quanto social à suas compras nos sites.</h2> 
-
-<h2>Hoje em dia, com o celular e a internet, avaliam tudo e qualquer coisa, na hora que quiser, do jeito que quiser. Escolhem restaurantes pelas avaliações feitas por outros consumidores, compram em lojas conforme a quantidade de estrelas que a loja tem, fruto da experiência dos outros compradores, influenciando assim você a comprar, gerando um marketing digital na sua cara, e você não percebendo.</h2>
-
-<h2>Também querem mais conforto e menos preocupações na entrega de seu pedidos e exigem mais segurança, não só na entrega de seu pedido, mas também pelo medo de ter seus dados e documentos vazados de alguma forma.</h2>
 <hr></hr>
 </head>
 
@@ -25,7 +18,7 @@
   <a href="home.html"><button style="background-color: rgb(112, 45, 112);color: white;">Voltar</button></a>
 <footer>
   <div style="color:white;text-align: center;"> 
-    Todos os Direitos Reservados:deryck.ferre@gmail.com</p>
+    Direitos A ray308085@gmail.com</p>
 <hr></hr>
  </footer>
 </body>
